testsuite/escript/condexpr/condexpr04.err
condexpr04.src:1:6: error: missing ';' at '('
