testsuite/escript/condexpr/condexpr04.src
print(1 ? if (1) endif : 0 );
